# theprojec

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DOCKER-IMPLEMENTATION.md  Dockerfile  Dockerfile.windows  IMPLEMENTATION-SUMMARY.md  README.md  analyze-beliefs.txt  check-econ-diversity.txt  check-regions.txt  metrics.csv  test-balance-long.txt  test-balance-medium.txt  test-balance-short.txt  test-balance-simple.ps1  test-demo-enabled.txt  test-demo-verify.ps1  test-demographics-off.txt  test-demographics.ps1  test-econ-long.txt  test-econ-politics.txt  test-economy-1000.txt  test-economy-fix.txt  test-economy.txt  test-long-economy.txt  test-long-scarcity.txt  test-movements.txt  test-regions.txt  test-scarcity.txt  test-surplus-1000.txt  test-surplus.txt  test-trade-3000.txt
_codeql_build_dir/: CMakeCache.txt  KernelSim  Makefile  OpinionSim  cmake_install.cmake
cli/: CMakeLists.txt  main_kernel.cpp
cmake/: EnsureCudaDeviceRuntime.cmake
core/: CMakeLists.txt
core/include/io/: Snapshot.h
core/include/kernel/: Agent.h  AgentDataView.h  AgentStorage.h  GpuWorker.h  Kernel.h
core/include/modules/: CohortDemographics.h  Culture.h  Economy.h  EconomyTypes.h  Health.h  MeanField.h  Movement.h  OnlineClustering.h  Psychology.h  TradeNetwork.h
core/src/io/: Snapshot.cpp
core/src/kernel/: GpuWorker.cu  Kernel.cpp
core/src/modules/: CohortDemographics.cpp  Culture.cpp  Economy.cpp  Health.cpp  MeanField.cpp  Movement.cpp  OnlineClustering.cpp  Psychology.cpp  TradeNetwork.cpp
docker/: .dockerignore  docker-compose.yml
docs/: API.md  DESIGN.md  DOCKER.md  ECONOMY-PHASE-2.2.md  OPTIMIZATION-GUIDE.md  PHASE-2.3-SUMMARY.md  QUICKSTART.md  STATUS.md
game/: CMakeLists.txt
game/include/modules/: Movement.h
game/src/modules/: Movement.cpp
include/: Clustering.h  Kernel.h
legacy/: CMakeLists.txt
legacy/include/: Individual.h  Network.h  Simulation.h  Snapshot.h
legacy/src/: BeliefTypes.cpp  Individual.cpp  Network.cpp  Simulation.cpp  main.cpp
scripts/: build.bat  build.sh
src/: Clustering.cpp  Kernel.cpp  Snapshot.cpp  main_kernel.cpp
tests/: CMakeLists.txt  clustering_tests.cpp  economy_tests.cpp  integration_tests.sh  kernel_tests.cpp  story_probes.cpp
